# pdf-mcp

./: .mcp.json  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
assets/: generate.py
src/pdf_mcp/: server.py
tests/: conftest.py  test_get_page_image.py  test_get_page_text.py  test_get_pdf_info.py  test_get_table_of_contents.py  test_search_text.py  verify_refactor.py
